<resources>

    <!-- App -->
    <string name="app_name">ChaisPas</string>
    <string name="app_company">AppNCO</string>
    <string name="home">Home</string>
    <string name="impressum" translatable="false">ChaisPas</string>

    <!-- Room -->
    <string name="rooms">Rooms</string>
    <string name="id">id</string>
    <string name="room_name">Roome Name</string>
    <string name="room_nbOf">Number of place</string>
    <string name="edit_room">Edit Room</string>
    <string name="create_room">Room created</string>
    <string name="delete_room">Room deleted</string>

    <string name="room_card_title">Details</string>
    <string name="room_card_id">Name</string>
    <string name="room_card_nb_place">Total places</string>
    <string name="room_card_student">Number of students</string>
    <string name="room_card_computer">Number of computers</string>
    <string name="room_card_view_computer_button">View computers</string>
    <string name="room_card_view_student_button">View students</string>


    <!-- Student -->
    <string name="students">Students</string>
    <string name="student_lastname">Last Name</string>
    <string name="student_firstName">First Name</string>
    <string name="edit_student">Edit Student</string>
    <string name="create_student">Student created</string>
    <string name="delete_student">Student Deleted</string>

    <string name="student_card_title">Details</string>
    <string name="student_card_firstname">First name</string>
    <string name="student_card_lastname">Last name</string>
    <string name="student_card_view_room_button">View room</string>

    <!-- Computer -->
    <string name="computers">Computers</string>
    <string name="computer_label">Computer label</string>
    <string name="computer_type">Computer type</string>
    <string name="computer_description">Computer description</string>
    <string name="edit_computer">Edit Computer</string>
    <string name="create_computer">Computer created</string>
    <string name="delete_computer">Computer deleted</string>

    <string name="computer_card_title">Details</string>
    <string name="computer_card_type">Type</string>
    <string name="computer_card_description">Description</string>
    <string name="computer_card_view_room_button">View room</string>

    <!-- Settings -->
    <string name="action_settings">Language</string>
    <string name="pref_header_about">About</string>
    <string name="action_language">Language</string>
    <string name="change_language">Change</string>

    <!-- Other -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_client">Client</string>
    <string name="title_activity_accounts">Accounts</string>

    <string-array name="pref_language_list_titles">
        <item>English</item>
        <item>German</item>
    </string-array>

    <string-array name="pref_language_list_values" translatable="false">
        <item>en</item>
        <item>de</item>
    </string-array>

    <string name="action_confirme">Yes</string>
    <string name="action_create">Create</string>
    <string name="action_update">Save Changes</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="toggle_admin" translatable="false">Admin</string>
    <string name="account_balance">Account Balance</string>
    <string name="action_deposit">Deposit</string>
    <string name="action_withdraw">Withdraw</string>
    <string name="action_transaction">Execute</string>
    <string name="action_accept">Execute</string>
    <string name="transaction_from">From</string>
    <string name="transaction_to">To</string>
    <string name="transaction_acc">Account</string>
    <string name="action_initialize_gae">Initialize Google Datastore</string>
    <string name="title_activity_transaction">Transaction</string>
    <string name="transaction_amount">Amount</string>
    <string name="error_transaction">The transfer amount exceeds the account balance</string>
    <string name="error_transaction_negativ">The transaction amount must be positive</string>
    <string name="balance" translatable="false">%1$s$</string>
    <string name="action_cancel">Cancel</string>
    <string name="error_withdraw">Withdrawal cannot exceed account balance</string>
    <string name="title_activity_edit_client">Edit Client</string>
    <string name="client_created">Client created</string>
    <string name="client_edited">Client edited</string>
    <string name="prompt_account_name">Account Name</string>
    <string name="title_activity_edit_account">Edit Account</string>
    <string name="account_created">Account created</string>
    <string name="account_edited">Account edited</string>
    <string name="client_deleted">Client deleted</string>
    <string name="account_deleted">Account deleted</string>
    <string name="title_activity_delete_account">Delete Account</string>
    <string name="title_activity_delete_client">Delete Client</string>
    <string name="account_delete_msg">Do you want to delete the account %1$s?</string>
    <string name="client_delete_msg">Do you really want to delete the client %1$s? All accounts of this client will be deleted as well.</string>
    <string name="pref_header_language">Language</string>
    <string name="pref_about_text">This application was developed to provide a possibility to demonstrate how the newly released Android Architecture Components could be implemented in an application.</string>
    <string name="pref_title_language">Change your display language</string>
    <string name="action_reset">Reset</string>
    <string name="logout_msg">Do you really want to close the app?</string>
    <string name="delete_msg">Do you really want to delete your client account?</string>
    <string name="reset_msg">Do you really want to reset the database?</string>
    <string name="transaction_executed">Transaction executed</string>
    <string name="transaction_no_selection">Please select a recipient</string>
    <string name="transaction_no_amount">Please specify an amount</string>
    <string name="action_demo_data">Reset Demo Data</string>
    <string name="demo_data_initiated">Demo data initiated</string>

</resources>
