<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    tools:context="ch.hevs.aislab.demo.ui.room.RoomDetailActivity">


    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/room_card_title"
                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="4dp"
                    tools:context="ch.hevs.aislab.demo.ui.computer.ComputerDetailActivity">

                    <TextView
                        android:id="@+id/roomIdLabel"
                        android:layout_weight=".60"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/room_card_id"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textColor="@color/colorLabel" />

                    <TextView
                        android:id="@+id/roomId"
                        android:layout_weight=".40"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="4dp"
                    tools:context="ch.hevs.aislab.demo.ui.computer.ComputerDetailActivity">

                    <TextView
                        android:id="@+id/roomNbPlacesLabel"
                        android:layout_weight=".60"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/room_card_nb_place"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textColor="@color/colorLabel" />

                    <TextView
                        android:id="@+id/roomNbPlaces"
                        android:layout_weight=".40"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="4dp"
                    tools:context="ch.hevs.aislab.demo.ui.computer.ComputerDetailActivity">

                    <TextView
                        android:id="@+id/roomStudentLabel"
                        android:layout_weight=".60"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/room_card_student"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textColor="@color/colorLabel" />

                    <TextView
                        android:id="@+id/roomStudent"
                        android:layout_weight=".40"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:elevation="4dp"
                    tools:context="ch.hevs.aislab.demo.ui.computer.ComputerDetailActivity">

                    <TextView
                        android:id="@+id/roomComputerLabel"
                        android:layout_weight=".60"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/room_card_computer"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textColor="@color/colorLabel" />

                    <TextView
                        android:id="@+id/roomComputer"
                        android:layout_weight=".40"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textAppearance="@android:style/TextAppearance.DeviceDefault"
                        android:textStyle="bold" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/depositButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_card_view_computer_button" />

    <Button
        android:id="@+id/withdrawButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/room_card_view_student_button" />


</LinearLayout>